--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
             <!-- Intro -->
             <div id="intro">
                 <h1>
-                    HideNSeek
+                    NLLBTranslator
                 </h1>
                 <img src="images/Appicon.png" alt="" width="50%" height="50%" />
                 <p>
-                    Turn Your Mac Dock Into a Productivity Powerhouse
+                    Translate Direcly from Your Screen Capture On your Machine
                 </p>
                 <ul class="actions">
                     <li>
@@ -119,6 +119,7 @@
         <script src="assets/js/main.js"></script>
     </body>
 </html>
+
 
 
 
